[gd_scene load_steps=18 format=3 uid="uid://b0nmucgpfoa4g"]

[ext_resource type="PackedScene" uid="uid://fxwwn1jq581p" path="res://scenes/UI/TelaPrincipal.tscn" id="1_kec7e"]
[ext_resource type="PackedScene" uid="uid://blmhgkkujxiu0" path="res://scenes/characters/player.tscn" id="2_1i48k"]
[ext_resource type="Texture2D" uid="uid://di2xuo80uxrij" path="res://icon.svg" id="3_2e8bc"]
[ext_resource type="Script" path="res://script/caixas/caixa1/nodeCaixa_1.gd" id="6_6dg71"]
[ext_resource type="PackedScene" uid="uid://qg5auvxr5pt0" path="res://scenes/objects/caixas/caixa_2.tscn" id="6_rvsuo"]
[ext_resource type="PackedScene" uid="uid://s81rie3pjfkb" path="res://scenes/objects/caixas/caixa_3.tscn" id="7_omsnu"]
[ext_resource type="PackedScene" uid="uid://dvyvej74ss17a" path="res://scenes/objects/caixas/caixa_4.tscn" id="8_lf82e"]
[ext_resource type="PackedScene" uid="uid://be2h0jnqyu87j" path="res://scenes/objects/caixas/caixa_5.tscn" id="9_68urk"]
[ext_resource type="Script" path="res://script/area_ativabtn.gd" id="9_wgt53"]
[ext_resource type="PackedScene" uid="uid://b67jchncypkhb" path="res://assets/3D/personRobo.blend" id="10_iorrw"]
[ext_resource type="PackedScene" uid="uid://bh2hl0s7s2gdu" path="res://assets/3D/terrenoCircuito.blend" id="11_wtdda"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sbs7r"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_30met"]
sky_material = SubResource("ProceduralSkyMaterial_sbs7r")

[sub_resource type="Environment" id="Environment_0im6x"]
background_mode = 2
sky = SubResource("Sky_30met")
tonemap_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_mivyg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sgssc"]
size = Vector3(7.60132, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_igwrm"]
albedo_texture = ExtResource("3_2e8bc")

[node name="main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0im6x")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.952215, 0.305429, 0, -0.305429, 0.952215, 0, 5.2907, 14.8686)

[node name="player" parent="." node_paths=PackedStringArray("joystick") instance=ExtResource("2_1i48k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0863, 0)
joystick = NodePath("../Control/CanvasLayer/joystick")

[node name="Control" parent="." instance=ExtResource("1_kec7e")]

[node name="areaCaixas" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.804057, 11.1266)

[node name="Nodecaixa1" type="Node3D" parent="areaCaixas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.37127, 0, 0)
script = ExtResource("6_6dg71")

[node name="caixa2" type="Node3D" parent="areaCaixas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86531, 0, 0)

[node name="caixa2" parent="areaCaixas/caixa2" instance=ExtResource("6_rvsuo")]

[node name="caixa3" type="Node3D" parent="areaCaixas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.389153, 0, 0)

[node name="caixa3" parent="areaCaixas/caixa3" instance=ExtResource("7_omsnu")]

[node name="caixa4" type="Node3D" parent="areaCaixas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10027, 0, 0)

[node name="caixa4" parent="areaCaixas/caixa4" instance=ExtResource("8_lf82e")]

[node name="caixa5" type="Node3D" parent="areaCaixas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.57009, 0, 0)

[node name="caixa5" parent="areaCaixas/caixa5" instance=ExtResource("9_68urk")]

[node name="AreaAtivaBtn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.50303, 0, 7.89162)
script = ExtResource("9_wgt53")

[node name="AreaExcluir" type="Area3D" parent="AreaAtivaBtn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.80754, 0.778419, -15.8425)

[node name="Collision" type="CollisionShape3D" parent="AreaAtivaBtn/AreaExcluir"]
shape = SubResource("BoxShape3D_mivyg")

[node name="AreaDrop" type="Area3D" parent="AreaAtivaBtn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0550135, 0.754429, 3.22782)

[node name="Collision" type="CollisionShape3D" parent="AreaAtivaBtn/AreaDrop"]
shape = SubResource("BoxShape3D_sgssc")

[node name="personRobo" parent="." instance=ExtResource("10_iorrw")]
transform = Transform3D(-1.63918e-08, 0, 0.375, 0, 0.375, 0, -0.375, 0, -1.63918e-08, 0, 3.99674, -11.7664)

[node name="terrenoCircuito" parent="." instance=ExtResource("11_wtdda")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -23.7399)

[node name="Cubo " parent="terrenoCircuito" index="1"]
material_override = SubResource("StandardMaterial3D_igwrm")

[connection signal="body_entered" from="AreaAtivaBtn/AreaExcluir" to="AreaAtivaBtn" method="_on_area_excluir_body_entered"]
[connection signal="body_exited" from="AreaAtivaBtn/AreaExcluir" to="AreaAtivaBtn" method="_on_area_excluir_body_exited"]
[connection signal="body_entered" from="AreaAtivaBtn/AreaDrop" to="AreaAtivaBtn" method="_on_area_drop_body_entered"]
[connection signal="body_exited" from="AreaAtivaBtn/AreaDrop" to="AreaAtivaBtn" method="_on_area_drop_body_exited"]

[editable path="player"]
[editable path="Control"]
[editable path="terrenoCircuito"]
